--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <a href="https://www.facebook.com/seu_perfil&quot; target="_blank">
                 <img src="facebook-icon.png" alt="Facebook" width="30">
             </a>
-            <a href="https://wa.me/seu_numero&quot; target="_blank">
+            <a href="https://wa.me/(41) 98765-4321; target="_blank">
                 <img src="whatsapp-icon.png" alt="WhatsApp" width="30">
             </a>
         </div>
